--- a/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
+++ b/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
@@ -4,22 +4,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simulations\n",
+    "# Simulations- Unit 3 Section 16 Lesson\n",
     "> Student Lesson by Alexa, Ava, Lydia, and Sri\n",
     "\n",
     "- toc: true\n",
     "- comments: true\n",
     "- permalink: /studentlesson/simulations\n",
-    "- image: /images/tools.jpg\n",
-    "- categories: [simulations]"
+    "- categories: [lesson8]"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Intro to Simulations\n",
+    "- What is a simulation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Examples of Simulations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Simulation vs. Experiment\n",
+    "- def of experiment and explain difference\n",
+    "- advantages and disadvantages\n",
+    "\n",
+    "leads into real life game example:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# A Real Life Example\n",
+    "\n",
+    "- four corners game here \n",
+    "- explain how person who chooses a corner is the random.randint\n",
+    "- \n",
+    "\n",
+    "\n",
+    "DEBRIEF: why is it better to code simulations than experiement in real life?"
+   ]
   }
  ],
  "metadata": {
