adding stuff from doc to lesson

--- a/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
+++ b/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
@@ -18,14 +18,20 @@
    "metadata": {},
    "source": [
     "# Intro to Simulations\n",
-    "- What is a simulation"
+    "- What is a simulation?\n",
+    "    - A simulation is an imitation of a situation or process\n",
+    "    - Aka a virtual experiment "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Examples of Simulations"
+    "# Examples of Simulations:\n",
+    "Simulations are used all the time over many different industries\n",
+    "- testing safety of a car\n",
+    "- testing the efficiency of a parking lot\n",
+    "- testing a new train route"
    ]
   },
   {
@@ -33,8 +39,18 @@
    "metadata": {},
    "source": [
     "# Simulation vs. Experiment\n",
-    "- def of experiment and explain difference\n",
-    "- advantages and disadvantages\n",
+    "- Experiment definition: procedure undertaken to make a discovery, test a hypothesis, or demonstrate a known fact\n",
+    "\n",
+    "So, why use a simulation?\n",
+    "\n",
+    "- Advantages: \n",
+    "    - Can be safer\n",
+    "    - More cost-effective\n",
+    "    - More efficient \n",
+    "    - More data in less time\n",
+    "- Disadvantages:\n",
+    "    - Not as accurate as experiments\n",
+    "    - outside factors not included (ex: in rolling dice simulation gravity and air resistance)\n",
     "\n",
     "leads into real life game example:"
    ]
