adding  corners game to lesson

--- a/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
+++ b/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
@@ -68,6 +68,36 @@
     "\n",
     "DEBRIEF: why is it better to code simulations than experiement in real life?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You chose corner number 2 and are still in!\n",
+      "You chose corner number 1 and you're OUT\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "status = \"in\"\n",
+    "while status != \"out\":\n",
+    "    chooseCorner = input(\"What corner do you choose?\")\n",
+    "\n",
+    "    corner = random.randint(1,4)\n",
+    "\n",
+    "    if int(chooseCorner) == corner:\n",
+    "        status = \"out\"\n",
+    "        print(\"You chose corner number \" + chooseCorner + \" and you're OUT\")\n",
+    "    else:\n",
+    "        print(\"You chose corner number \" + chooseCorner + \" and are still in!\")\n"
+   ]
   }
  ],
  "metadata": {
@@ -77,7 +107,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.10"
   },
   "orig_nbformat": 4,
