--- a/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
+++ b/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
@@ -30,6 +30,7 @@
     "# Examples of Simulations:\n",
     "Simulations are used all the time over many different industries\n",
     "- testing safety of a car\n",
+    "- games\n",
     "- testing the efficiency of a parking lot\n",
     "- testing a new train route"
    ]
