played game again

--- a/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
+++ b/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
@@ -72,15 +72,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "You chose corner number 3 and are still in!\n",
       "You chose corner number 2 and are still in!\n",
-      "You chose corner number 1 and you're OUT\n"
+      "You chose corner number 4 and you're OUT\n"
      ]
     }
    ],
