--- a/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
+++ b/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
@@ -57,6 +57,54 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Rolling a Dice Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 5, 6, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "def parse_input(input_string):\n",
+    "    if input_string.strip() in {\"1\", \"2\", \"3\",\"4\", \"5\", \"6\"}:\n",
+    "        return int(input_string)\n",
+    "    else:\n",
+    "        print(\"Please enter a number from 1 to 6.\")\n",
+    "        raise SystemExit(1)\n",
+    "\n",
+    "import random\n",
+    "\n",
+    "def roll_dice(num_dice):\n",
+    "    roll_results = []\n",
+    "    for _ in range(num_dice):\n",
+    "        roll = random.randint(1, 6)\n",
+    "        roll_results.append(roll)\n",
+    "    return roll_results\n",
+    "\n",
+    "\n",
+    "num_dice_input = input(\"How many dice do you want to roll? [1-6] \")\n",
+    "num_dice = parse_input(num_dice_input)\n",
+    "roll_results = roll_dice(num_dice)\n",
+    "\n",
+    "print(roll_results) # remove this line after testing the app\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -104,7 +152,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -118,12 +166,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "c592ff5847e581e8b66b02dcd331c526c35045e822da212864271a73a90b0063"
    }
   }
  },
