Created Simulations Quiz with Python

--- a/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
+++ b/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
@@ -148,6 +148,81 @@
     "    else:\n",
     "        print(\"You chose corner number \" + chooseCorner + \" and are still in!\")\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hacks"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Hack #1: Simulation Quiz**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "questions = \\\n",
+    "{\n",
+    "    \"1. Simulations will always have the same result\": {\n",
+    "        \"A\": \"True\",\n",
+    "        \"B\": \"False\"\n",
+    "        \n",
+    "    },\n",
+    "    \"2. A simulation has results that are more accurate than an experiment\": {\n",
+    "        \"A\": \"True\",\n",
+    "        \"B\": \"False\"\n",
+    "       \n",
+    "    },\n",
+    "    \"3. A simulation can model real world events that are not practical for experiments\": {\n",
+    "        \"A\": \"True\",\n",
+    "        \"B\": \"False\"\n",
+    "   \n",
+    "    },\n",
+    "    \"4. Which one of these is FALSE regarding simulations\": {\n",
+    "        \"A\": \"Reduces Costs\",\n",
+    "        \"B\": \"Is safer than real life experiments\",\n",
+    "        \"C\": \"More Efficient\",\n",
+    "        \"D\": \"More accurate than real life experiments\"\n",
+    "    },\n",
+    "    \"5. Which of the following scenarios would be the LEAST beneficial to have as a simulation\": {\n",
+    "        \"A\": \"A retail company wants to identify the item which sold the most on their website\",\n",
+    "        \"B\": \"A restaurant wants to determine if the use of robots will increase efficiency\",\n",
+    "        \"C\": \"An insurance company wants to study the impact of rain on car accidents\",\n",
+    "        \"D\": \"A sports car company wants to study design changes to their new bike design \"\n",
+    "    },\n",
+    "        \"6. Which of the following is better to do as a simulation than as a calculation\": {\n",
+    "        \"A\": \"Keeping score at a basketball game\",\n",
+    "        \"B\": \"Keeping track of how many games a person has won\",\n",
+    "        \"C\": \"Determining the average grade for a group of tests\",\n",
+    "        \"D\": \"Studying the impact of carbon emissions on the environment\"\n",
+    "}\n",
+    "}\n",
+    "\n",
+    "print(\"\\nSimulations Quiz\")\n",
+    "prompt = \">>> \"\n",
+    "correct_options = ['D', 'C', 'D', 'B', 'A']\n",
+    "score_count = 0\n",
+    "\n",
+    "for correct_option, (question, options) in zip(correct_options, questions.items()):\n",
+    "    print(\"\\n\", question, \"\\n\")\n",
+    "    for option, answer in options.items():\n",
+    "        print(option, \":\", answer)\n",
+    "    choice = str(input(prompt))\n",
+    "    if choice.upper() == correct_option:\n",
+    "        score_count = score_count + 1\n",
+    "print(\"Your score is:\")\n",
+    "print(score_count)"
+   ]
   }
  ],
  "metadata": {
