--- a/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
+++ b/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
@@ -167,9 +167,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Simulations Quiz\n",
+      "\n",
+      " 1. Simulations will always have the same result \n",
+      "\n",
+      "A : True\n",
+      "B : False\n",
+      "\n",
+      " 2. A simulation has results that are more accurate than an experiment \n",
+      "\n",
+      "A : True\n",
+      "B : False\n",
+      "\n",
+      " 3. A simulation can model real world events that are not practical for experiments \n",
+      "\n",
+      "A : True\n",
+      "B : False\n",
+      "\n",
+      " 4. Which one of these is FALSE regarding simulations \n",
+      "\n",
+      "A : Reduces Costs\n",
+      "B : Is safer than real life experiments\n",
+      "C : More Efficient\n",
+      "D : More accurate than real life experiments\n",
+      "\n",
+      " 5. Which of the following scenarios would be the LEAST beneficial to have as a simulation \n",
+      "\n",
+      "A : A retail company wants to identify the item which sold the most on their website\n",
+      "B : A restaurant wants to determine if the use of robots will increase efficiency\n",
+      "C : An insurance company wants to study the impact of rain on car accidents\n",
+      "D : A sports car company wants to study design changes to their new bike design \n",
+      "Your score is:\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "questions = \\\n",
     "{\n",
@@ -227,7 +267,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -246,7 +286,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c592ff5847e581e8b66b02dcd331c526c35045e822da212864271a73a90b0063"
+    "hash": "25ccfe66b39282fc3ea19bf8fc3cc43ce18f6044ac6a7f466ec4a156f6861604"
    }
   }
  },
