--- a/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
+++ b/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Intro to Simulations\n",
+    "# Intro to Simulations - Alexa\n",
     "- What is a simulation?\n",
     "    - A simulation is an imitation of a situation or process\n",
     "    - Aka a virtual experiment "
@@ -57,11 +57,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# A Real Life Example - Lydia & Ava\n",
+    "\n",
+    "- four corners game here \n",
+    "- explain how person who chooses a corner is the random.randint\n",
+    "- \n",
+    "\n",
+    "\n",
+    "DEBRIEF: why is it better to code simulations than experiement in real life?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You chose corner number 2 and are still in!\n",
+      "You chose corner number 3 and are still in!\n",
+      "You chose corner number 4 and you're OUT\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "status = \"in\"\n",
+    "while status != \"out\":\n",
+    "    chooseCorner = input(\"What corner do you choose?\")\n",
+    "\n",
+    "    corner = random.randint(1,4)\n",
+    "\n",
+    "    if int(chooseCorner) == corner:\n",
+    "        status = \"out\"\n",
+    "        print(\"You chose corner number \" + chooseCorner + \" and you're OUT\")\n",
+    "    else:\n",
+    "        print(\"You chose corner number \" + chooseCorner + \" and are still in!\")\n"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Rolling a Dice Example"
+    "# Rolling a Dice Example - Sri"
    ]
   },
   {
@@ -108,45 +153,201 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A Real Life Example\n",
-    "\n",
-    "- four corners game here \n",
-    "- explain how person who chooses a corner is the random.randint\n",
-    "- \n",
     "\n",
     "\n",
-    "DEBRIEF: why is it better to code simulations than experiement in real life?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You chose corner number 3 and are still in!\n",
-      "You chose corner number 2 and are still in!\n",
-      "You chose corner number 4 and you're OUT\n"
-     ]
-    }
-   ],
-   "source": [
-    "import random\n",
+    "{% comment %}\n",
+    "Conway's Game of Life https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life\n",
+    "{% endcomment %}\n",
     "\n",
-    "status = \"in\"\n",
-    "while status != \"out\":\n",
-    "    chooseCorner = input(\"What corner do you choose?\")\n",
+    "<style>\n",
+    "    #container {\n",
+    "    display: grid;\n",
+    "    }\n",
     "\n",
-    "    corner = random.randint(1,4)\n",
+    "    .cell {\n",
+    "    background-color: royalblue;\n",
+    "    border: 1px solid black;\n",
+    "    }\n",
+    "</style>\n",
     "\n",
-    "    if int(chooseCorner) == corner:\n",
-    "        status = \"out\"\n",
-    "        print(\"You chose corner number \" + chooseCorner + \" and you're OUT\")\n",
-    "    else:\n",
-    "        print(\"You chose corner number \" + chooseCorner + \" and are still in!\")\n"
+    "<div class=\"container\">\n",
+    "    <header class=\"pb-3 mb-4 border-bottom border-primary text-dark\">\n",
+    "        <span class=\"fs-4\">Remix of Game of Life</span>\n",
+    "    </header>\n",
+    "    <!-- Buttons that link to functions in javascript -->\n",
+    "    <button onclick=\"start()\" id=\"start-btn\">start</button>\n",
+    "    <button onclick=\"step()\">step</button>\n",
+    "    <!-- Container drawn by JavaScript -->\n",
+    "    <div id=\"container\" class=\"container py-4\">\n",
+    "    </div>\n",
+    "</div>\n",
+    "\n",
+    "<script>\n",
+    "\n",
+    "// Constants\n",
+    "let GRID_SIZE = 40;\n",
+    "let CELL_SIZE = \"15px\";\n",
+    "let container = document.getElementById(\"container\");\n",
+    "\n",
+    "// Add CSS to container to make it a grid\n",
+    "container.style[\"grid-template-columns\"] = `repeat(${GRID_SIZE}, ${CELL_SIZE})`;\n",
+    "// Add squares to grid\n",
+    "for(let i=0; i<GRID_SIZE*GRID_SIZE; i++) {\n",
+    "    let di = document.createElement('div');\n",
+    "    di.style['width'] = CELL_SIZE;\n",
+    "    di.style['height'] = CELL_SIZE;\n",
+    "    di.onclick = clicked; // setting event listener to clicked function\n",
+    "    di.ondragstart = dragged;\n",
+    "    di.ondragover = dragged;\n",
+    "    di.className = 'cell';\n",
+    "    di.id = 'cell-'+i;\n",
+    "    container.appendChild(di)\n",
+    "}\n",
+    "\n",
+    "\n",
+    "const CELLS = Array(GRID_SIZE).fill().map(() => Array(GRID_SIZE).fill(0)); // create 2D array filled with '0'\n",
+    "const safeindex = (x, y) => !(x < 0 || x >= GRID_SIZE || y<0 || y >= GRID_SIZE); // Anonymous function to check bounds of index\n",
+    "// safeindex(0,0) = true\n",
+    "// safeindex(-1,-1) = false, because -1 falls out of bounds\n",
+    "\n",
+    "\n",
+    "function safeGet(x, y) {\n",
+    "    if(!safeindex(x,y)) return 0;\n",
+    "    if(CELLS[y][x] === 0) return 0; // blank square\n",
+    "    if(CELLS[y][x] === 1) return 1; // filled square\n",
+    "    if(CELLS[y][x] === 2) return 0; // previously blank square\n",
+    "    if(CELLS[y][x] === 3) return 1; // previously filled square\n",
+    "    console.error(\"AHH\"); // should never get here\n",
+    "}\n",
+    "\n",
+    "// helper function to set a square on the grid\n",
+    "function setCell(n, v) {\n",
+    "    let row = Math.floor(n/GRID_SIZE);\n",
+    "    let col = n%GRID_SIZE;\n",
+    "    CELLS[row][col] = v;\n",
+    "}\n",
+    "\n",
+    "// Helper function to toggle a cell by it's index\n",
+    "function toggleCell(n) {\n",
+    "    let row = Math.floor(n/GRID_SIZE);\n",
+    "    let col = n%GRID_SIZE;\n",
+    "    CELLS[row][col] = CELLS[row][col] === 0 ? 1 : 0;\n",
+    "}\n",
+    "\n",
+    "\n",
+    "// Call this every interval, it will look through our CELLS array and reflect its data on the grid\n",
+    "function updateContainer() {\n",
+    "    CELLS.forEach((arr, r) => {\n",
+    "    arr.forEach((val, c) => {\n",
+    "        let n = r*GRID_SIZE + c;\n",
+    "        if(val === 1) {\n",
+    "        document.getElementById(\"cell-\"+n).style['background-color'] = 'yellow';\n",
+    "        }else {\n",
+    "        document.getElementById(\"cell-\"+n).style['background-color'] = 'royalblue'\n",
+    "        }\n",
+    "    });\n",
+    "    })\n",
+    "}\n",
+    "\n",
+    "\n",
+    "// will be called whenever a cell is clicked\n",
+    "function clicked() {\n",
+    "    const id = parseInt(this.id.substring(5), 10); // the id of a cell is \"cell-XX\" where XX is the index\n",
+    "    toggleCell(id); // if a cell is clicked we will toggle it\n",
+    "    updateContainer();\n",
+    "}\n",
+    "\n",
+    "// Same thing as clicked except tied to drag event\n",
+    "function dragged() {\n",
+    "    const id = parseInt(this.id.substring(5), 10);\n",
+    "    setCell(id, 1);\n",
+    "    updateContainer()\n",
+    "}\n",
+    "\n",
+    "// Randomly setting cells to 1 in the grid\n",
+    "function randomInit(n) {\n",
+    "    let max = GRID_SIZE*GRID_SIZE;\n",
+    "    for(let i=0; i<n; i++) {\n",
+    "    setCell(Math.floor(Math.random()*max), 1)\n",
+    "    }\n",
+    "    updateContainer();\n",
+    "}\n",
+    "\n",
+    "// check how many alive neighbors a cell has\n",
+    "function getNeighbors(x,y) {\n",
+    "    const l = x-1;\n",
+    "    const r = x+1;\n",
+    "    const u = y-1;\n",
+    "    const d = y+1;\n",
+    "\n",
+    "    return safeGet(l, y) +\n",
+    "            safeGet(r, y) +\n",
+    "            safeGet(x, u) +\n",
+    "            safeGet(x, d) +\n",
+    "            safeGet(l, u) +\n",
+    "            safeGet(r, u) +\n",
+    "            safeGet(l, d) +\n",
+    "            safeGet(r, d);\n",
+    "}\n",
+    "\n",
+    "function step() {\n",
+    "    for(let y=0; y<GRID_SIZE; y++) {\n",
+    "        for(let x=0; x<GRID_SIZE; x++) { // for every square in the grid...\n",
+    "\n",
+    "            const n = getNeighbors(x, y); // find how many alive neighbors it has\n",
+    "            const val = safeGet(x, y); // Get the value of the cell\n",
+    "\n",
+    "            if(val === 0) { // if the cell is dead...\n",
+    "                if(n === 3) { // and it has three alive neighbors...\n",
+    "                    CELLS[y][x] = 2; // Make this cell come to life\n",
+    "                }\n",
+    "            } else { // If the cell is alive...\n",
+    "                if(n === 2 || n === 3) { // and it has ONLY 2 or ONLY 3 alive neighbors...\n",
+    "                    CELLS[y][x] = 3; // The cell gets to live another round\n",
+    "                }\n",
+    "            }\n",
+    "\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    // Run through every modified cell and convert it to either alive or dead\n",
+    "    for(let y=0; y<GRID_SIZE; y++) {\n",
+    "        for(let x=0; x<GRID_SIZE; x++) {\n",
+    "            CELLS[y][x] = Math.floor(CELLS[y][x]/2);\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    updateContainer(); // call the update function to reflect changes in the\n",
+    "}\n",
+    "\n",
+    "\n",
+    "let paused = false;\n",
+    "const startbtn = document.getElementById(\"start-btn\");\n",
+    "\n",
+    "// used to toggle the animation\n",
+    "function togglePause() {\n",
+    "    paused = !paused;\n",
+    "    if(paused) {\n",
+    "    startbtn.innerHTML = \"resume\"\n",
+    "    } else {\n",
+    "    startbtn.innerHTML = \"pause\";\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Used to start the animation\n",
+    "function start() {\n",
+    "    startbtn.innerHTML = \"pause\";\n",
+    "    startbtn.onclick = togglePause;\n",
+    "\n",
+    "    // setInterval will call the function within it ever 100ms\n",
+    "    const interval = setInterval(function() {\n",
+    "    if(!paused) {\n",
+    "        step();\n",
+    "    }\n",
+    "    }, 100);\n",
+    "}\n",
+    "\n",
+    "</script>\n"
    ]
   },
   {
@@ -163,105 +364,6 @@
    "metadata": {},
    "source": [
     "**Hack #1: Simulation Quiz**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Simulations Quiz\n",
-      "\n",
-      " 1. Simulations will always have the same result \n",
-      "\n",
-      "A : True\n",
-      "B : False\n",
-      "\n",
-      " 2. A simulation has results that are more accurate than an experiment \n",
-      "\n",
-      "A : True\n",
-      "B : False\n",
-      "\n",
-      " 3. A simulation can model real world events that are not practical for experiments \n",
-      "\n",
-      "A : True\n",
-      "B : False\n",
-      "\n",
-      " 4. Which one of these is FALSE regarding simulations \n",
-      "\n",
-      "A : Reduces Costs\n",
-      "B : Is safer than real life experiments\n",
-      "C : More Efficient\n",
-      "D : More accurate than real life experiments\n",
-      "\n",
-      " 5. Which of the following scenarios would be the LEAST beneficial to have as a simulation \n",
-      "\n",
-      "A : A retail company wants to identify the item which sold the most on their website\n",
-      "B : A restaurant wants to determine if the use of robots will increase efficiency\n",
-      "C : An insurance company wants to study the impact of rain on car accidents\n",
-      "D : A sports car company wants to study design changes to their new bike design \n",
-      "Your score is:\n",
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "questions = \\\n",
-    "{\n",
-    "    \"1. Simulations will always have the same result\": {\n",
-    "        \"A\": \"True\",\n",
-    "        \"B\": \"False\"\n",
-    "        \n",
-    "    },\n",
-    "    \"2. A simulation has results that are more accurate than an experiment\": {\n",
-    "        \"A\": \"True\",\n",
-    "        \"B\": \"False\"\n",
-    "       \n",
-    "    },\n",
-    "    \"3. A simulation can model real world events that are not practical for experiments\": {\n",
-    "        \"A\": \"True\",\n",
-    "        \"B\": \"False\"\n",
-    "   \n",
-    "    },\n",
-    "    \"4. Which one of these is FALSE regarding simulations\": {\n",
-    "        \"A\": \"Reduces Costs\",\n",
-    "        \"B\": \"Is safer than real life experiments\",\n",
-    "        \"C\": \"More Efficient\",\n",
-    "        \"D\": \"More accurate than real life experiments\"\n",
-    "    },\n",
-    "    \"5. Which of the following scenarios would be the LEAST beneficial to have as a simulation\": {\n",
-    "        \"A\": \"A retail company wants to identify the item which sold the most on their website\",\n",
-    "        \"B\": \"A restaurant wants to determine if the use of robots will increase efficiency\",\n",
-    "        \"C\": \"An insurance company wants to study the impact of rain on car accidents\",\n",
-    "        \"D\": \"A sports car company wants to study design changes to their new bike design \"\n",
-    "    },\n",
-    "        \"6. Which of the following is better to do as a simulation than as a calculation\": {\n",
-    "        \"A\": \"Keeping score at a basketball game\",\n",
-    "        \"B\": \"Keeping track of how many games a person has won\",\n",
-    "        \"C\": \"Determining the average grade for a group of tests\",\n",
-    "        \"D\": \"Studying the impact of carbon emissions on the environment\"\n",
-    "}\n",
-    "}\n",
-    "\n",
-    "print(\"\\nSimulations Quiz\")\n",
-    "prompt = \">>> \"\n",
-    "correct_options = ['D', 'C', 'D', 'B', 'A']\n",
-    "score_count = 0\n",
-    "\n",
-    "for correct_option, (question, options) in zip(correct_options, questions.items()):\n",
-    "    print(\"\\n\", question, \"\\n\")\n",
-    "    for option, answer in options.items():\n",
-    "        print(option, \":\", answer)\n",
-    "    choice = str(input(prompt))\n",
-    "    if choice.upper() == correct_option:\n",
-    "        score_count = score_count + 1\n",
-    "print(\"Your score is:\")\n",
-    "print(score_count)"
    ]
   }
  ],
