--- a/_notebooks/2022-12-12-simulationquiz.ipynb
+++ b/_notebooks/2022-12-12-simulationquiz.ipynb
@@ -111,6 +111,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Old Quiz Format:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
