adding hacks into lesson

--- a/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
+++ b/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
@@ -18,9 +18,19 @@
    "metadata": {},
    "source": [
     "# Intro to Simulations - Alexa\n",
-    "- What is a simulation?\n",
+    "- What is a **simulation**?\n",
     "    - A simulation is an imitation of a situation or process\n",
-    "    - Aka a virtual experiment "
+    "    - Aka a <u>virtual experiment </u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Guiding questions for a simulation:\n",
+    "    - What makes it a simulation?\n",
+    "    - What are it’s advantages and disadvantages? \n",
+    "    - In your opinion, would an experiment be better in this situation?"
    ]
   },
   {
@@ -40,16 +50,16 @@
    "metadata": {},
    "source": [
     "# Simulation vs. Experiment\n",
-    "- Experiment definition: procedure undertaken to make a discovery, test a hypothesis, or demonstrate a known fact\n",
+    "- **Experiment** definition: procedure undertaken to make a discovery, test a hypothesis, or demonstrate a known fact\n",
     "\n",
     "So, why use a simulation?\n",
     "\n",
-    "- Advantages: \n",
+    "- **Advantages**: \n",
     "    - Can be safer\n",
     "    - More cost-effective\n",
     "    - More efficient \n",
     "    - More data in less time\n",
-    "- Disadvantages:\n",
+    "- **Disadvantages**:\n",
     "    - Not as accurate as experiments\n",
     "    - outside factors not included (ex: in rolling dice simulation gravity and air resistance)\n",
     "\n",
@@ -99,6 +109,29 @@
     "        print(\"You chose corner number \" + chooseCorner + \" and you're OUT\")\n",
     "    else:\n",
     "        print(\"You chose corner number \" + chooseCorner + \" and are still in!\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hack #1 \n",
+    "* Create an idea for a simulation and describe it (you don’t actually have to code it just think about/answer the guiding questions)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hack #2\n",
+    "* Simulations Quiz:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "insert quiz here Ava :D"
    ]
   },
   {
@@ -351,11 +384,20 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hacks"
+    "## Hack #3\n",
+    "* Describe the rolling dice simulation (answer guiding questions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hack #4\n",
+    "* Add a feature onto the rolling dice simulation above \n",
+    "    - ex: a 14-sided dice or expand the purpose of the simulation (hint: use conditionals to make dice part of a game/real life situation)"
    ]
   },
   {
@@ -363,7 +405,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Hack #1: Simulation Quiz**"
+    "# Hacks Overview"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use these guiding questions for a simulation:\n",
+    "    - What makes it a simulation?\n",
+    "    - What are it’s advantages and disadvantages? \n",
+    "    - In your opinion, would an experiment be better in this situation?\n",
+    "\n",
+    "### Hack #1 (0.3)\n",
+    "* Create an idea for a simulation and describe it (you don’t actually have to code it just think about/answer the guiding questions).\n",
+    "\n",
+    "### Hack #2 (0.1)\n",
+    "* Simulations Quiz \n",
+    "\n",
+    "### Hack #3 (0.2)\n",
+    "* Describe the rolling dice simulation (answer guiding questions)\n",
+    "\n",
+    "### Hack #4 (0.3)\n",
+    "* Add a feature onto the rolling dice simulation above \n",
+    "    - ex: a 14-sided dice or expand the purpose of the simulation (hint: use conditionals to make dice part of a game/real life situation)\n",
+    "\n",
+    "### Extra Credit (0.1)\n",
+    "* For the extra 0.1: try coding a simple simulation and describe it (guiding question)\n"
    ]
   }
  ],
