--- a/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
+++ b/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Intro to Simulations - Alexa\n",
+    "# 3.16 Intro to Simulations - Alexa\n",
     "- What is a **simulation**?\n",
     "    - A simulation is an imitation of a situation or process\n",
     "    - Aka a <u>virtual experiment </u>"
@@ -128,10 +128,48 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "insert quiz here Ava :D"
+    "questions_number = 6\n",
+    "answers_correct = 0\n",
+    "questions = [\n",
+    "    \"True or False: Simulations will always have the same result. \\n A: True, \\n B: False\",\n",
+    "    \"True or False: A simulation has results that are more accurate than an experiment \\n A: True, \\n B: False\",\n",
+    "    \"True or False: A simulation can model real world events that are not practical for experiments \\n A: True, \\n B: False\",\n",
+    "    \"Which one of these is FALSE regarding simulations \\n A: Reduces Costs, \\n B: Is safer than real life experiments, \\n C: More Efficient, \\n D: More accurate than real life experiments\",\n",
+    "    \"Which of the following scenarios would be the LEAST beneficial to have as a simulation \\n A: A retail company wants to identify the item which sold the most on their website, \\n B: A restaurant wants to determine if the use of robots will increase efficiency, \\n C: An insurance company wants to study the impact of rain on car accidents, \\n D: A sports car company wants to study design changes to their new bike design \",\n",
+    "    \"Which of the following is better to do as a simulation than as a calculation \\n A: Keeping score at a basketball game, \\n B: Keeping track of how many games a person has won, \\n C: Determining the average grade for a group of tests, \\n D: Studying the impact of carbon emissions on the environment\"\n",
+    "]\n",
+    "question_answers = [\n",
+    "    \"B\",\n",
+    "    \"B\",\n",
+    "    \"A\",\n",
+    "    \"D\",\n",
+    "    \"A\",\n",
+    "    \"D\"\n",
+    "]\n",
+    "\n",
+    "print(\"Welcome to the Simulations Quiz!\")\n",
+    "\n",
+    "def ask_question (question, answer):\n",
+    "    print(\"\\n\", question)\n",
+    "    user_answer = input(question)\n",
+    "    print(\"You said: \", user_answer)\n",
+    "\n",
+    "    if user_answer == answer:\n",
+    "        print(\"Correct!\")\n",
+    "        global answers_correct\n",
+    "        answers_correct = answers_correct + 1\n",
+    "    else:\n",
+    "        print(\"You are incorrect\")\n",
+    "    \n",
+    "for num in range(questions_number):\n",
+    "    ask_question(questions[num], question_answers[num])\n",
+    "\n",
+    "print(\"You scored: \", answers_correct, \"/6\")"
    ]
   },
   {
