--- a/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
+++ b/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
@@ -236,7 +236,7 @@
     "    }\n",
     "\n",
     "    .cell {\n",
-    "    background-color: royalblue;\n",
+    "    background-color: lightpink;\n",
     "    border: 1px solid black;\n",
     "    }\n",
     "</style>\n",
