adding to quiz hack

--- a/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
+++ b/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
@@ -124,7 +124,7 @@
    "metadata": {},
    "source": [
     "## Hack #2\n",
-    "* Simulations Quiz:"
+    "* Simulations Quiz (either screenshot or paste quiz in your notebook):"
    ]
   },
   {
@@ -182,14 +182,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2, 5, 6, 1]\n"
+      "you rolled: [5, 1, 2]\n"
      ]
     }
    ],
@@ -217,7 +217,7 @@
     "num_dice = parse_input(num_dice_input)\n",
     "roll_results = roll_dice(num_dice)\n",
     "\n",
-    "print(roll_results) # remove this line after testing the app\n"
+    "print(\"you rolled:\", roll_results) \n"
    ]
   },
   {
@@ -460,7 +460,7 @@
     "* Create an idea for a simulation and describe it (you don’t actually have to code it just think about/answer the guiding questions).\n",
     "\n",
     "### Hack #2 (0.1)\n",
-    "* Simulations Quiz \n",
+    "* Simulations Quiz (either screenshot or paste quiz in your notebook)\n",
     "\n",
     "### Hack #3 (0.2)\n",
     "* Describe the rolling dice simulation (answer guiding questions)\n",
