--- a/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
+++ b/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
@@ -17,6 +17,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<style>\n",
+    "    background-color: darkgrey;\n",
+    "</style>\n",
+    "\n",
     "# 3.16 Intro to Simulations - Alexa\n",
     "- What is a **simulation**?\n",
     "    - A simulation is an imitation of a situation or process\n",
@@ -62,6 +66,9 @@
     "- **Disadvantages**:\n",
     "    - Not as accurate as experiments\n",
     "    - outside factors not included (ex: in rolling dice simulation gravity and air resistance)\n",
+    "- When do you <u>not</u> use a simulation?\n",
+    "    - when a situation already has set results/data (won't change) \n",
+    "    - examples: a score in a game, most purchased food, average yearly wage\n",
     "\n",
     "leads into real life game example:"
    ]
@@ -123,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hack #2\n",
+    "## Hack #2 (collegeboard based questions)\n",
     "* Simulations Quiz (either screenshot or paste quiz in your notebook):"
    ]
   },
@@ -224,7 +231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    "# Game of Life - Lydia & Ava\n",
     "\n",
     "{% comment %}\n",
     "Conway's Game of Life https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life\n",
@@ -312,9 +319,9 @@
     "    arr.forEach((val, c) => {\n",
     "        let n = r*GRID_SIZE + c;\n",
     "        if(val === 1) {\n",
-    "        document.getElementById(\"cell-\"+n).style['background-color'] = 'yellow';\n",
+    "        document.getElementById(\"cell-\"+n).style['background-color'] = 'royalblue';\n",
     "        }else {\n",
-    "        document.getElementById(\"cell-\"+n).style['background-color'] = 'royalblue'\n",
+    "        document.getElementById(\"cell-\"+n).style['background-color'] = 'lightpink'\n",
     "        }\n",
     "    });\n",
     "    })\n",
