adding color to back

--- a/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
+++ b/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
@@ -18,7 +18,9 @@
    "metadata": {},
    "source": [
     "<style>\n",
-    "    background-color: darkgrey;\n",
+    "    cell {\n",
+    "        background-color: #00292a;\n",
+    "    }\n",
     "</style>\n",
     "\n",
     "# 3.16 Intro to Simulations - Alexa\n",
@@ -432,6 +434,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<style>\n",
+    "    cell {\n",
+    "        background-color: #00292a;\n",
+    "    }\n",
+    "</style>\n",
+    "\n",
     "## Hack #3\n",
     "* Describe the rolling dice simulation (answer guiding questions)"
    ]
