adding 4 corners explanation

--- a/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
+++ b/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
@@ -79,11 +79,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A Real Life Example - Lydia & Ava\n",
+    "# A Real Life Example: Four Corners - Lydia & Ava\n",
     "\n",
-    "- four corners game here \n",
-    "- explain how person who chooses a corner is the random.randint\n",
-    "- \n",
+    "- an example of a simulation and experiment = the game of 4 corners\n",
+    "- games are simulations!\n",
+    "\n",
+    "### The rules of the game:\n",
+    "1. a person stands in the center of a room and the 4 coners are labeled 1-4\n",
+    "2. Every player chooses a corner while the person in the middle closes their eyes\n",
+    "3. person in the middle chooses/calls out a number\n",
+    "4. every player in that corner is now out\n",
+    "5. contine until there is a winner!\n",
+    "\n",
+    "### Let's play!\n",
+    "\n",
+    "### Comparing Experiment to Simulation Code:\n",
+    "- Mr. Mortensen (person in the middle) = random.randint\n",
+    "- if statement = if player is out\n",
+    "- else = safe/continue\n",
+    "- while loop = repeats process until there is a winner of the game\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "DEBRIEF: why is it better to code simulations than experiement in real life?"
