editing colors more

--- a/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
+++ b/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
@@ -330,9 +330,9 @@
     "    arr.forEach((val, c) => {\n",
     "        let n = r*GRID_SIZE + c;\n",
     "        if(val === 1) {\n",
-    "        document.getElementById(\"cell-\"+n).style['background-color'] = 'royalblue';\n",
+    "        document.getElementById(\"cell-\"+n).style['background-color'] = 'yellow';\n",
     "        }else {\n",
-    "        document.getElementById(\"cell-\"+n).style['background-color'] = 'lightpink'\n",
+    "        document.getElementById(\"cell-\"+n).style['background-color'] = 'lightblue'\n",
     "        }\n",
     "    });\n",
     "    })\n",
